<resources>
    <string name="app_name">Perfect Pick</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search">search</string>
    <string name="favorites">favorites</string>
    <string name="profile">profile</string>
    <string name="restaurant">Restaurant Picker</string>
    <string name="nightlife">Nightlife Picker</string>
    <string name="activity">Activity Picker</string>
    <string name="food_type">Enter Cuisine Type (Italian, Mexican, etc.)</string>
    <string name="night_type">Enter Any Specifications (Club, Bar, etc.)</string>
    <string name="activity_type">Enter Any Specifications (Hiking, Games, etc.)</string>
    <string name="zip_code">Enter 5 Digit Zip Code</string>
    <string name="dollar_sign">Select the number of dollar signs:</string>
    <string name="one_dollar_sign">$</string>
    <string name="two_dollar_sign">$$</string>
    <string name="three_dollar_sign">$$$</string>
    <string name="four_dollar_sign">$$$$</string>
    <string name="error">No places found...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nightlife_fragment">Nightlife Fragment</string>
    <string name="activity_fragment">Activity Fragment</string>
    <string name="start">start</string>
    <string name="spin">Pick From Favorites!</string>
    <string name="pick">Pick for Me!</string>
</resources>