<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_nightlife"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <TextView
        android:id="@+id/titleNightlife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/nightlife"
        android:textColor="@android:color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:shadowColor="@color/light_teal"
        android:shadowDx="5"
        android:shadowRadius="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nightType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:backgroundTint="@color/teal"
        android:ems="18"
        android:hint="@string/night_type"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleNightlife"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:backgroundTint="@color/teal"
        android:ems="11"
        android:hint="@string/zip_code"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nightType"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dollar_sign"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zipCode" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="60dp"
        app:chipSpacingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <!-- Chips can be declared here, or added dynamically. -->
        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_dollar_sign"
            android:textColor="@color/white"
            app:chipSurfaceColor="@color/teal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="163dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_dollar_sign"
            android:textColor="@color/white"
            app:chipSurfaceColor="@color/teal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="163dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_dollar_sign"
            android:textColor="@color/white"
            app:chipSurfaceColor="@color/teal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="163dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_dollar_sign"
            android:textColor="@color/white"
            app:chipSurfaceColor="@color/teal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="163dp" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="@color/teal"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>